--- a/dbglib/Makefile
+++ b/dbglib/Makefile
@@ -13,6 +13,7 @@ SRCFILES := ser.c
 SRCFILES += mem.c
 SRCFILES += s5l8930_uart.c
 SRCFILES += msm8960_uartdm.c
+SRCFILES += exynos5250_uart.c
 
 include $(MKDIR)/Makefile_arm_lib.common
 
